--- a/app/src/main/res/layout/activity_inside_folder_activtiy.xml
+++ b/app/src/main/res/layout/activity_inside_folder_activtiy.xml
@@ -23,7 +23,7 @@
         android:id="@+id/images_view_inside_folder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/adView_banner_inside_top"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
