--- a/app/src/main/res/layout/activity_open_image.xml
+++ b/app/src/main/res/layout/activity_open_image.xml
@@ -8,10 +8,11 @@
 
     <ImageView
         android:id="@+id/image_open_image"
-        android:layout_width="500dp"
+        android:layout_width="wrap_content"
         android:scaleType="fitXY"
         android:layout_margin="20dp"
-        android:layout_height="500dp"/>
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:id="@+id/image_tools_open_image"
