--- a/app/src/main/res/layout/pdftools.xml
+++ b/app/src/main/res/layout/pdftools.xml
@@ -170,8 +170,28 @@ android:gravity="center"
             android:layout_height="wrap_content">
 
 
+<!--            <com.google.android.material.chip.Chip-->
+<!--                android:id="@+id/esignature"-->
+<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginLeft="10dp"-->
+<!--                android:layout_marginRight="10dp"-->
+<!--                android:fontFamily="@font/arbutusslabregular"-->
+<!--                android:gravity="center"-->
+<!--                android:padding="5dp"-->
+<!--                android:text="Esignature"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textColor="@color/colorPrimaryDark"-->
+<!--                android:theme="@style/Theme.MaterialComponents.Light"-->
+<!--                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"-->
+<!--                app:chipIconTint="@color/colorPrimaryDark"-->
+<!--                app:chipIconVisible="false"-->
+<!--                app:chipStrokeColor="@color/colorPrimaryDark"-->
+<!--                app:rippleColor="@color/colorAccent" />-->
+
             <com.google.android.material.chip.Chip
-                android:id="@+id/esignature"
+                android:id="@+id/idcard"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -180,7 +200,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Esignature"
+                android:text="idcard"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -189,6 +209,127 @@ android:gravity="center"
                 app:chipIconVisible="false"
                 app:chipStrokeColor="@color/colorPrimaryDark"
                 app:rippleColor="@color/colorAccent" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/encrypt"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Encrypt"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/ocr"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="OCR"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/extract_text_from_pdf"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Extract Text From PDF"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/pageno"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Page No"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/compress_pdf_original"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Compress PDF"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
         </LinearLayout>
 
 </LinearLayout>
