--- a/app/src/main/res/layout/qr_bottom_modal.xml
+++ b/app/src/main/res/layout/qr_bottom_modal.xml
@@ -14,6 +14,10 @@
         android:contentDescription="copy"
         android:padding="10dp"
         android:src="@drawable/ic_content_copy_black1_24dp" />
+    <ScrollView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 <TextView
     android:layout_width="match_parent"
     android:padding="20dp"
@@ -25,5 +29,5 @@
     android:fontFamily="@font/arbutusslabregular"
     android:textSize="17sp"
     android:layout_height="wrap_content"/>
-
+    </ScrollView>
 </LinearLayout>
