--- a/app/src/main/res/layout/activity_add_watermark.xml
+++ b/app/src/main/res/layout/activity_add_watermark.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddWatermarkActivity">
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView_banner_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-4411531601838575/9691480628">
+    </com.google.android.gms.ads.AdView>
 
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/add_watermark_pdf_preview"
