--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -4,17 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     tools:context=".SplashScreen">
 
-    <ImageView
-        android:layout_width="87dp"
-        android:layout_height="87dp"
-        android:src="@drawable/logo_main1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/splash_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    </ImageView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
