--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,20 +8,21 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-<!--    <com.google.android.gms.ads.AdView-->
-<!--        ads:layout_constraintTop_toTopOf="parent"-->
-<!--        ads:layout_constraintLeft_toLeftOf="parent"-->
-<!--        xmlns:ads="http://schemas.android.com/apk/res-auto"-->
-<!--        android:id="@+id/adView_banner_main"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        ads:adSize="BANNER"-->
-<!--        ads:adUnitId="ca-app-pub-4411531601838575/5504108625">-->
-<!--    </com.google.android.gms.ads.AdView>-->
+    <com.google.android.gms.ads.AdView
+        ads:layout_constraintTop_toTopOf="parent"
+        ads:layout_constraintLeft_toLeftOf="parent"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView_banner_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-4411531601838575/5504108625">
+    </com.google.android.gms.ads.AdView>
 
 <LinearLayout
+    app:layout_constraintTop_toBottomOf="@+id/adView_banner_main"
     android:id="@+id/ll_empty"
     android:layout_width="match_parent"
     android:orientation="vertical"
