--- a/app/src/main/res/layout/pdftools.xml
+++ b/app/src/main/res/layout/pdftools.xml
@@ -20,7 +20,7 @@ android:gravity="center"
             android:textColor="#fff"
             android:layout_gravity="center"
             android:textSize="15dp"
-            android:layout_height="wrap_content"></TextView>
+            android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
         app:layout_constraintTop_toTopOf="parent"
@@ -309,7 +309,110 @@ android:gravity="center"
                 app:chipIconVisible="false"
                 app:chipStrokeColor="@color/colorPrimaryDark"
                 app:rippleColor="@color/colorAccent" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/deletepdf"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Delete Page"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/rotate_pdf"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Rotate PDF"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/compress_pdf_actual"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Compress"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/office_to_pdf"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/arbutusslabregular"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Office to PDF"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:theme="@style/Theme.MaterialComponents.Light"
+                app:chipIcon="@drawable/ic_picture_as_pdf_black_24dp"
+                app:chipIconTint="@color/colorPrimaryDark"
+                app:chipIconVisible="false"
+                app:chipStrokeColor="@color/colorPrimaryDark"
+                app:rippleColor="@color/colorAccent" />
+
+
+
+        </LinearLayout>
+
 
 </LinearLayout>
 </LinearLayout>
