--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,6 +11,12 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/action_set_password"
+        android:icon="@drawable/ic_enhanced_encryption_black_24dp"
+        android:title="Encrypt"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/action_more"
         android:icon="@drawable/ic_more_vert_black_24dp"
         android:title="Create Folder"
