--- a/app/src/main/res/layout/activity_inside_folder_activtiy.xml
+++ b/app/src/main/res/layout/activity_inside_folder_activtiy.xml
@@ -33,8 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:borderWidth="0dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_marginRight="24dp"
+        app:backgroundTint="@color/colorPrimary"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="84dp"
         app:layout_constraintBottom_toTopOf="@+id/fab_inside_folder"
         app:layout_constraintRight_toRightOf="parent"
@@ -43,11 +43,11 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_inside_folder"
         android:layout_width="wrap_content"
-        android:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimary"
         app:borderWidth="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
@@ -58,8 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:layout_marginRight="16dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:layout_marginEnd="16dp"
+        app:backgroundTint="@color/colorPrimary"
         app:borderWidth="0dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
