--- a/app/src/main/res/layout/pdftools.xml
+++ b/app/src/main/res/layout/pdftools.xml
@@ -6,6 +6,7 @@
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:id="@+id/pdf_tools_top"
         android:layout_width="match_parent"
         android:background="@color/colorPrimaryDark"
 android:gravity="center"
@@ -16,7 +17,7 @@ android:gravity="center"
             android:layout_width="match_parent"
             android:gravity="center"
             android:textStyle="bold"
-            android:text="PDF Tools"
+            android:text="@string/pdf_tools"
             android:textColor="#fff"
             android:layout_gravity="center"
             android:textSize="15dp"
@@ -50,7 +51,7 @@ android:layout_gravity="center"
                 android:layout_marginRight="20dp"
                 android:fontFamily="@font/arbutusslabregular"
                 android:padding="5dp"
-                android:text="PDF Merge"
+                android:text="@string/pdf_merge"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
                 app:chipIcon="@drawable/ic_call_merge_black_24dp"
@@ -69,7 +70,7 @@ android:layout_gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="watermark"
+                android:text="@string/watermark"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -107,7 +108,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Split By Fixed Range"
+                android:text="@string/split_by_fixed_range"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -140,7 +141,7 @@ android:gravity="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:fontFamily="@font/arbutusslabregular"
                 android:theme="@style/Theme.MaterialComponents.Light"
-                android:text="PDF to Image"
+                android:text="@string/pdf_to_image"
                 />
 
             <com.google.android.material.chip.Chip
@@ -152,7 +153,7 @@ android:gravity="center"
                 android:baselineAligned="false"
                 android:fontFamily="@font/arbutusslabregular"
                 android:padding="5dp"
-                android:text="Split"
+                android:text="@string/split"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
                 app:chipIcon="@drawable/ic_call_split_black_24dp"
@@ -200,7 +201,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="idcard"
+                android:text="@string/idcard"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -220,7 +221,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Encrypt"
+                android:text="@string/encrypt"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -250,7 +251,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="OCR"
+                android:text="@string/ocr"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -270,7 +271,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Extract Text From PDF"
+                android:text="@string/extract_text_from_pdf"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -300,7 +301,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Page No"
+                android:text="@string/page_no"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -320,7 +321,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Delete Page"
+                android:text="@string/delete_page"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -350,7 +351,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Rotate PDF"
+                android:text="@string/rotate_pdf"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -370,7 +371,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Compress"
+                android:text="@string/compress"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -399,7 +400,7 @@ android:gravity="center"
                 android:fontFamily="@font/arbutusslabregular"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Office to PDF"
+                android:text="@string/office_to_pdf"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:theme="@style/Theme.MaterialComponents.Light"
@@ -408,8 +409,6 @@ android:gravity="center"
                 app:chipIconVisible="false"
                 app:chipStrokeColor="@color/colorPrimaryDark"
                 app:rippleColor="@color/colorAccent" />
-
-
 
         </LinearLayout>
 
