--- a/app/src/main/res/layout/activity_add_watermark.xml
+++ b/app/src/main/res/layout/activity_add_watermark.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddWatermarkActivity">
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView_banner_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
         ads:adUnitId="ca-app-pub-4411531601838575/9691480628">
@@ -31,7 +30,7 @@
         android:visibility="invisible"
         android:layout_margin="20dp"
         android:layout_below="@+id/add_watermark_pdf_preview"
-        android:hint="Enter Watermark Text"
+        android:hint="@string/enter_watermark_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -40,8 +39,8 @@
         android:layout_above="@+id/add_watermark_add_pdf"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/ic_done_black_24dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_done_black_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -50,16 +49,18 @@
         android:layout_alignParentEnd="true"
         android:layout_above="@id/fab_settings_watermark"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/ic_add_black_24dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_add_black_24dp"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/ic_settings_black_24dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_settings_black_24dp"
+
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:id="@+id/fab_settings_watermark"
