--- a/app/src/main/res/layout/activity_delete_page.xml
+++ b/app/src/main/res/layout/activity_delete_page.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_add_black_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -29,7 +29,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_done_black_24dp"
         android:layout_above="@+id/fab_delete_load_pdf"
         android:layout_width="wrap_content"
