--- a/app/src/main/res/layout/activity_image_rotate.xml
+++ b/app/src/main/res/layout/activity_image_rotate.xml
@@ -35,7 +35,7 @@
             android:fontFamily="@font/arbutusslabregular"
 
             android:background="@color/colorPrimary"
-            android:text="save" />
+            android:text="@string/save" />
 
 
         <Button
@@ -50,7 +50,6 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
-            android:layout_centerVertical="true"
             android:background="@drawable/ic_rotate_left_black_24dp"
             android:gravity="center" />
 
@@ -67,8 +66,7 @@
             android:layout_weight="1"
 
             android:background="@color/colorPrimary"
-            android:layout_centerVertical="true"
-            android:text="cancel" />
+            android:text="@string/cancel" />
 
     </LinearLayout>
 
