--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,11 +32,10 @@
 
         android:id="@+id/fab"
         app:backgroundTint="@color/colorPrimary"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="28dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginBottom="28dp"
         app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
 
@@ -46,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         app:backgroundTint="@color/colorPrimary"
-        android:layout_marginRight="28dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginBottom="28dp"
         app:srcCompat="@drawable/qrcode" />
 
@@ -58,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="28dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginBottom="28dp"
         app:srcCompat="@drawable/ic_picture_as_pdf_black_24dp" />
 
@@ -69,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         app:backgroundTint="@color/colorPrimary"
-        android:layout_marginRight="28dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginBottom="28dp"
         app:srcCompat="@drawable/ic_done_black_24dp" />
 
@@ -79,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         app:backgroundTint="@color/colorPrimary"
-        android:layout_marginRight="28dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginBottom="28dp"
         app:srcCompat="@drawable/ic_code_black_24dp" />
 
@@ -113,7 +112,7 @@
             android:layout_height="24dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_content_copy_black_24dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_weight="1"
             android:background="?attr/selectableItemBackgroundBorderless"
 
@@ -126,7 +125,7 @@
             android:layout_height="24dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_content_cut_black_24dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_weight="1"
             android:background="?attr/selectableItemBackgroundBorderless"
 
@@ -139,7 +138,7 @@
             android:layout_height="24dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_delete_black_24dp2"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_weight="1"
             android:background="?attr/selectableItemBackgroundBorderless"
 
