--- a/app/src/main/res/layout/activity_page_number.xml
+++ b/app/src/main/res/layout/activity_page_number.xml
@@ -21,7 +21,7 @@
         android:id="@+id/text_view_page_number"
         android:padding="20dp"
         android:textColor="@color/colorPrimary"
-        android:text="Select A PDF"
+        android:text="@string/select_pdf"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
@@ -38,7 +38,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_done_black_24dp"
         android:layout_above="@+id/fab_settings"
         android:layout_alignParentEnd="true"
@@ -49,7 +49,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_add_black_24dp"
         android:layout_above="@+id/page_number_done"
         android:layout_alignParentEnd="true"
@@ -60,7 +60,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_settings_black_24dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
