--- a/app/src/main/res/layout/activity_pdftools.xml
+++ b/app/src/main/res/layout/activity_pdftools.xml
@@ -1,11 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/rl_esign"
     android:layout_height="match_parent"
     tools:context=".PDFToolsActivity">
 
+    <ImageView
+        android:layout_centerInParent="true"
+        android:scaleType="fitCenter"
+        android:id="@+id/image_esign"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_done_esign"
+        android:layout_above="@+id/fab_add_sign"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="16dp"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_done_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add_pdf_esign"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="16dp"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add_sign"
+        android:layout_above="@+id/fab_add_pdf_esign"
+
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="16dp"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
