--- a/app/src/main/res/layout/activity_set_password.xml
+++ b/app/src/main/res/layout/activity_set_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rl_set_password_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +13,7 @@
         android:layout_above="@+id/password_set_password"
         android:padding="20dp"
         android:textColor="@color/colorAccent"
-        android:text="Set Pin"
+        android:text="@string/set_pin"
         android:textSize="20sp"
         android:textStyle="bold"
         android:fontFamily="@font/arbutusslabregular"
@@ -27,7 +28,7 @@
         android:backgroundTint="@color/colorAccent"
         android:padding="20dp"
         android:layout_margin="20dp"
-        android:hint="Enter Pin"
+        android:hint="@string/enter_pin"
         android:textColorHint="@color/colorAccent"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
@@ -41,7 +42,7 @@
         android:backgroundTint="@color/colorAccent"
         android:padding="20dp"
         android:layout_margin="20dp"
-        android:hint="Re-Enter Pin"
+        android:hint="@string/re_enter_pin"
         android:textColorHint="@color/colorAccent"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
@@ -53,7 +54,7 @@
         android:layout_below="@+id/password_retype_set_password"
         android:padding="20dp"
         android:layout_margin="20dp"
-        android:text="Next"
+        android:text="@string/next"
         android:layout_centerHorizontal="true"
         android:background="@color/colorAccent"
         android:textColor="@color/colorPrimary"
@@ -63,7 +64,7 @@
     <Button
         android:id="@+id/change_password_set_password"
         android:textColor="@color/colorPrimary"
-        android:text="Change Password"
+        android:text="@string/change_password"
         android:visibility="invisible"
         android:layout_centerInParent="true"
         android:padding="20dp"
@@ -75,7 +76,7 @@
     <Button
         android:id="@+id/remove_password_set_password"
         android:textColor="@color/colorPrimary"
-        android:text="Remove Password"
+        android:text="@string/remove_password"
         android:visibility="invisible"
         android:layout_below="@+id/change_password_set_password"
         android:layout_centerHorizontal="true"
