--- a/app/src/main/res/layout/activity_split_pdf.xml
+++ b/app/src/main/res/layout/activity_split_pdf.xml
@@ -31,7 +31,7 @@
         android:padding="20dp"
         android:textStyle="bold"
         android:fontFamily="serif"
-        android:text="Select a pdf from PDF button below"
+        android:text="@string/select_a_pdf_from_pdf_button_below"
         />
 
     <RelativeLayout
