--- a/app/src/main/res/layout/add_watermark_settings.xml
+++ b/app/src/main/res/layout/add_watermark_settings.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:id="@+id/ll_settings_top_watermark"
         android:layout_width="match_parent"
         android:background="@color/colorPrimaryDark"
         android:gravity="center"
@@ -14,7 +15,7 @@
             android:layout_width="match_parent"
             android:gravity="center"
             android:textStyle="bold"
-            android:text="Page Number Settings"
+            android:text="@string/page_number_settings"
             android:textColor="#fff"
             android:layout_gravity="center"
             android:textSize="15dp"
@@ -33,14 +34,14 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/font_size_watermark"
                 android:inputType="numberDecimal"
-                android:hint="Font Size"
+                android:hint="@string/select_font_size"
                 android:padding="20dp"
                 android:layout_margin="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:text="Text Color"
+                android:text="@string/text_color"
                 android:textAlignment="center"
                 android:padding="20dp"
                 android:textSize="20sp"
@@ -59,7 +60,7 @@
 
             <Button
                 android:id="@+id/btn_save_settings_watermark"
-                android:text="Save Settings"
+                android:text="@string/save_settings"
                 android:background="@color/colorPrimary"
                 android:textColor="#fff"
                 android:layout_width="match_parent"
