--- a/app/src/main/res/layout/ask_password_view.xml
+++ b/app/src/main/res/layout/ask_password_view.xml
@@ -29,7 +29,7 @@
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
         android:paddingRight="5dp"
-        android:hint="Enter password"
+        android:hint="@string/enter_password"
         android:layout_height="wrap_content" />
 
 
