--- a/app/src/main/res/layout/bottom_modal.xml
+++ b/app/src/main/res/layout/bottom_modal.xml
@@ -8,7 +8,7 @@
 
    <TextView
        android:id="@+id/confirm_save_to_dialog"
-       android:text="Confirm Copy "
+       android:text="@string/confirm_copy_files"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
@@ -22,13 +22,13 @@
       <Button
           android:id="@+id/yes_bottom_modal"
           android:layout_margin="20dp"
-          android:text="Yes"
+          android:text="@string/yes"
           android:layout_weight="1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <Button
           android:id="@+id/no_bottom_modal"
-          android:text="No"
+          android:text="@string/no"
           android:layout_margin="20dp"
           android:layout_weight="1"
           android:layout_width="match_parent"
