--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -15,7 +15,7 @@
         android:layout_above="@+id/password_splash"
         android:padding="20dp"
         android:textColor="@color/colorAccent"
-        android:text="Enter Pin"
+        android:text="@string/enter_pin"
         android:textSize="20sp"
         android:textStyle="bold"
         android:fontFamily="@font/arbutusslabregular"
@@ -30,7 +30,7 @@
         android:backgroundTint="@color/colorAccent"
         android:padding="20dp"
         android:layout_margin="20dp"
-        android:hint="Enter Pin"
+    android:hint="@string/enter_pin"
         android:textColorHint="@color/colorAccent"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
             android:layout_below="@+id/password_splash"
             android:padding="20dp"
             android:layout_margin="20dp"
-            android:text="Next"
+            android:text="@string/next"
             android:layout_centerHorizontal="true"
             android:background="@color/colorAccent"
             android:textColor="@color/colorPrimary"
