--- a/app/src/main/res/layout/page_number_settings_layout.xml
+++ b/app/src/main/res/layout/page_number_settings_layout.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:id="@+id/ll_page_number_settings"
         android:layout_width="match_parent"
         android:background="@color/colorPrimaryDark"
         android:gravity="center"
@@ -14,7 +15,7 @@
         android:layout_width="match_parent"
         android:gravity="center"
         android:textStyle="bold"
-        android:text="Page Number Settings"
+        android:text="@string/page_number_settings"
         android:textColor="#fff"
         android:layout_gravity="center"
         android:textSize="15dp"
@@ -39,7 +40,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edit_text_starting_page"
-        android:hint="Starting Page Number"
+        android:hint="@string/starting_page_number"
         android:padding="25dp"
 
         android:inputType="number"
@@ -49,7 +50,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edit_text_from"
-        android:hint="From Page Number"
+        android:hint="@string/from_page_number"
         android:padding="25dp"
         android:layout_margin="25dp"
         android:inputType="number"
@@ -58,7 +59,7 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/edit_text_to"
-        android:hint="To Page Number"
+        android:hint="@string/to_page_number"
         android:inputType="number"
         android:padding="25dp"
         android:layout_margin="25dp"
@@ -67,7 +68,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_text_font_size"
-                android:hint="Text Size"
+                android:hint="@string/text_size"
                 android:inputType="numberDecimal"
                 android:padding="25dp"
                 android:layout_margin="25dp"
@@ -75,7 +76,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:text="Text Color"
+                android:text="@string/text_color"
                 android:textAlignment="center"
                 android:padding="20dp"
                 android:textSize="20sp"
@@ -94,7 +95,7 @@
 
         <Button
             android:id="@+id/btn_save_settings"
-            android:text="Save Settings"
+            android:text="@string/save"
             android:background="@color/colorPrimary"
             android:textColor="#fff"
             android:layout_width="match_parent"
